src/test/deca/context/invalid/provided/and_type_incompatible5.deca
/*/ Description:
//    Programme effectuant l'opération or de façon incorrecte.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2022*/

{
        float a = 7.665;
        float b = 5.55;
        boolean c = a && b;
}
